--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Tailwind CSS v4 with PrimeUI plugin */
+@import "tailwindcss";
+@plugin "tailwindcss-primeui";
+
+/* PrimeIcons */
+@import 'primeicons/primeicons.css';
+
+@layer base {
+  body {
+    @apply m-0 p-0 bg-surface-50;
+    font-family: var(--font-family);
+  }
+}
