--- a/examples/autocomplete/autocomplete.component.html
+++ b/examples/autocomplete/autocomplete.component.html
@@ -8,6 +8,11 @@ Enabling dropdown property displays a button next to the input field where click
 <p-autocomplete [(ngModel)]="value" [dropdown]="true" [suggestions]="items" (completeMethod)="search($event)" />
 
 
+<!-- Objects
+AutoComplete can also work with objects using the optionLabel property that defines the label to display as a suggestion. The value passed to the model would still be the object instance of a suggestion. Here is an example with a Country object that has name and code fields such as {name: "United States", code:"USA"}. -->
+<p-autocomplete [(ngModel)]="selectedCountry" [suggestions]="filteredCountries" (completeMethod)="filterCountry($event)" optionLabel="name" />
+
+
 <!-- Multiple:
 Multiple mode is enabled using multiple property used to select more than one value from the autocomplete. In this case, value reference should be an array. -->
 <p-autocomplete [(ngModel)]="value" inputId="multiple-ac-1" multiple fluid [suggestions]="items" (completeMethod)="search($event)" />
