--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen flex items-center justify-center text-2xl font-semibold">
-  Angular Template (Basic)
+  Angular 20 Template
 </div>
 
 <router-outlet />
